--- a/css/style.css
+++ b/css/style.css
@@ -695,15 +695,51 @@ display: flex;
 .designedby img {
     margin-left: 10px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1240px) {
  	.social-info{
-		padding:4px 0 20px;
+		padding: 4px 0 20px;
 		text-align:center;
 	}
+	.row{
+		padding:0;
+		font-size:14px;
+		display: flex;
+		margin: 0;
+
+		max-width: 100%;
+		justify-content: center;
+		flex-direction: column;
+		    align-items: center;
+	}
+	.text-block {
+		background: #fff;
+		
+		padding: 0;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		flex-direction: column;
+}
+
 @media (max-width: 980px) { 
-	.container{
-		padding:22px 0;
+	.row{
+		padding:9px 0;
 		font-size:15px;
+		display: flex;
+		
+		max-width: 100%;
+		justify-content: center;
+		flex-direction: column;
+		    align-items: center;
 	}
 	.footer-information{
 		padding:52px 0;
@@ -738,18 +774,174 @@ display: flex;
 	}
 	.footer{
 		padding:65px 0;
-			max-width:700px;
+		
 			text-align:center;
 	}
 	.designedby{
 		padding:20px;
 	}
-	.col-33{
-		padding:22px;
-	}
+	
 	.form{
 		padding:25px 0;
 	}
+
+	@media (max-width: 768px) { 
+		.container{
+			padding:20px 0;
+			font-size:14px;
+		}
+		.footer-information{
+			padding:45px 0;
+			  justify-content: center;
+			flex-direction: column;
+				align-items: center;
+		}
+
+		.text-reviews{
+			font-size:15px;
+			text-align:center;
+			padding:2px 0 3px;
+		}
+		.social-info{
+			padding:1px 0 12px;
+			text-align:center;
+		}
+		.text-block{
+			padding:0 12px;
+			font-size:14px;
+			 justify-content: center;
+			  align-items: center;
+		}
+		.form .form-inner input{
+			width: 396px;
+			max-width:59%;
+	   
+		}
+		.form .form-inner button{
+			width: 100px;
+				max-width:58%;
+			font-size: 14px;
+		}
+		.footer{
+			padding:54px 0;
+				max-width:500px;
+				text-align:center;
+		}
+		.designedby{
+			padding:14px;
+		}
+		.col-33{
+			padding:16px;
+		}
+		.form{
+			padding:18px 0;
+		}
+	
+	}
+	@media (max-width: 580px) { 
+		.container{
+			padding:18px 0;
+			font-size:12px;
+		}
+		.footer-information{
+			padding:38px 0;
+			  justify-content: center;
+			flex-direction: column;
+				align-items: center;
+		}
+		.text-reviews{
+			font-size:12px;
+			text-align:center;
+			padding:2px 0 3px;
+		}
+		.social-info{
+			padding:1px 0 12px;
+			text-align:center;
+		}
+		.text-block{
+			padding:0 12px;
+			font-size:14px;
+			 justify-content: center;
+			  align-items: center;
+		}
+		.form .form-inner input{
+			width: 280px;
+			max-width:50%;
+	   
+		}
+		.form .form-inner button{
+			width: 90px;
+				max-width:50%;
+			font-size: 14px;
+		}
+		.footer{
+			padding:42px 0;
+				max-width:350px;
+				text-align:center;
+		}
+		.designedby{
+			padding:13px;
+		}
+		.col-33{
+			padding:12px;
+		}
+		.form{
+			padding:12px 0;
+		}
+	
+	}
+@media (max-width: 544px) { 
+	.container{
+				padding:18px 0;
+				font-size:12px;
+			}
+		.footer-information{
+				padding:38px 0;
+				  justify-content: center;
+				flex-direction: column;
+					align-items: center;
+			}
+			.text-reviews{
+				font-size:12px;
+				text-align:center;
+				padding:2px 0 3px;
+			}
+			.social-info{
+				padding:1px 0 12px;
+				text-align:center;
+			}
+			.text-block{
+				padding:0 12px;
+				font-size:14px;
+				 justify-content: center;
+				  align-items: center;
+			}
+			.form .form-inner input{
+				width: 280px;
+				max-width:50%;
+		   
+			}
+			.form .form-inner button{
+				width: 90px;
+					max-width:50%;
+				font-size: 14px;
+			}
+			.footer{
+				padding:42px 0;
+					max-width:350px;
+					text-align:center;
+			}
+			.designedby{
+				padding:13px;
+			}
+			.col-33{
+				padding:12px;
+			}
+			.form{
+				padding:12px 0;
+			}
+		
+		}
 @media (max-width:480px){
 	.container{
 		padding:15px 0;
@@ -801,58 +993,7 @@ display: flex;
 		padding:10px 0;
 	}
 }
-@media (max-width: 544px) { 
-.container{
-		padding:18px 0;
-		font-size:12px;
-	}
-	.footer-information{
-		padding:38px 0;
-		  justify-content: center;
-		flex-direction: column;
-		    align-items: center;
-	}
-	.text-reviews{
-		font-size:12px;
-		text-align:center;
-		padding:2px 0 3px;
-	}
-	.social-info{
-		padding:1px 0 12px;
-		text-align:center;
-	}
-	.text-block{
-		padding:0 12px;
-		font-size:14px;
-		 justify-content: center;
-		  align-items: center;
-	}
-	.form .form-inner input{
-		width: 280px;
-		max-width:50%;
-   
-	}
-	.form .form-inner button{
-		width: 90px;
-			max-width:50%;
-		font-size: 14px;
-	}
-	.footer{
-		padding:42px 0;
-			max-width:350px;
-			text-align:center;
-	}
-	.designedby{
-		padding:13px;
-	}
-	.col-33{
-		padding:12px;
-	}
-	.form{
-		padding:12px 0;
-	}
 
-}
 @media (max-width: 320px) { 
 	.container{
 		padding:12px 0;
@@ -905,108 +1046,5 @@ display: flex;
 	}
 
 }
-@media (max-width: 580px) { 
-	.container{
-		padding:18px 0;
-		font-size:12px;
-	}
-	.footer-information{
-		padding:38px 0;
-		  justify-content: center;
-		flex-direction: column;
-		    align-items: center;
-	}
-	.text-reviews{
-		font-size:12px;
-		text-align:center;
-		padding:2px 0 3px;
-	}
-	.social-info{
-		padding:1px 0 12px;
-		text-align:center;
-	}
-	.text-block{
-		padding:0 12px;
-		font-size:14px;
-		 justify-content: center;
-		  align-items: center;
-	}
-	.form .form-inner input{
-		width: 280px;
-		max-width:50%;
-   
-	}
-	.form .form-inner button{
-		width: 90px;
-			max-width:50%;
-		font-size: 14px;
-	}
-	.footer{
-		padding:42px 0;
-			max-width:350px;
-			text-align:center;
-	}
-	.designedby{
-		padding:13px;
-	}
-	.col-33{
-		padding:12px;
-	}
-	.form{
-		padding:12px 0;
-	}
 
-}
 
-@media (max-width: 768px) { 
-	.container{
-		padding:20px 0;
-		font-size:14px;
-	}
-	.footer-information{
-		padding:45px 0;
-		  justify-content: center;
-		flex-direction: column;
-		    align-items: center;
-	}
-	.text-reviews{
-		font-size:15px;
-		text-align:center;
-		padding:2px 0 3px;
-	}
-	.social-info{
-		padding:1px 0 12px;
-		text-align:center;
-	}
-	.text-block{
-		padding:0 12px;
-		font-size:14px;
-		 justify-content: center;
-		  align-items: center;
-	}
-	.form .form-inner input{
-		width: 396px;
-		max-width:59%;
-   
-	}
-	.form .form-inner button{
-		width: 100px;
-			max-width:58%;
-		font-size: 14px;
-	}
-	.footer{
-		padding:54px 0;
-			max-width:500px;
-			text-align:center;
-	}
-	.designedby{
-		padding:14px;
-	}
-	.col-33{
-		padding:16px;
-	}
-	.form{
-		padding:18px 0;
-	}
-
-}
